# sherekhan

./: .gitignore  LICENSE  MANIFEST.in  MANUAL.en.md  MANUAL.ko.md  MANUAL.md  README.md  USAGE.md  pyproject.toml  sk_createSyntheticDataset.py  sk_prepare.py  sk_run.py
.github/workflows/: ci.yml  release.yml
cpmg/: __init__.py  cpmg.py  model_2state.py
demo/: README.md  evaluate.py  make_scenarios.py  run_demo.sh
demo/multi/: README.md  evaluate_multi.py  make_multi.py  run_multi.sh
test/: run_tests.sh  test_globalfit.py  test_parse.py
test/fast/: fast-globalfit.conf  fast-matrix.conf  fast.conf
test/slow/: slow-matrix.conf  slow.conf
