[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherekhan"
version = "1.2.1"
description = "ShereKhan — NMR CPMG relaxation-dispersion curve analysis (two-state exchange fitting)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Prof. Dr. Donghan Lee", email = "lee.donghan@gmail.com" },
]
keywords = ["NMR", "CPMG", "relaxation dispersion", "chemical exchange", "biophysics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.6",
    "matplotlib>=3.3",
]

[project.urls]
Homepage = "https://www.kbsi.re.kr"

[project.scripts]
sk-prepare = "sk_prepare:main"
sk-run = "sk_run:main"
sk-synth = "sk_createSyntheticDataset:main"

[tool.setuptools]
packages = ["cpmg"]
py-modules = ["sk_run", "sk_prepare", "sk_createSyntheticDataset"]
